--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.inputsystem": "1.3.0",
     "com.unity.render-pipelines.universal": "12.1.6",
     "com.unity.ugui": "1.0.0",
+    "com.unity.visualeffectgraph": "12.1.6",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
